--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^4.1.0",
     "@expo/vector-icons": "^14.0.0",
+    "@gorhom/bottom-sheet": "^5.0.6",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-picker/picker": "2.7.5",
+    "@react-native-segmented-control/segmented-control": "2.5.2",
+    "@react-navigation/drawer": "^7.0.6",
     "@react-navigation/native": "^6.1.7",
     "@reduxjs/toolkit": "^2.3.0",
     "@rn-primitives/alert-dialog": "^1.1.0",
     "@rn-primitives/avatar": "^1.1.0",
+    "@rn-primitives/checkbox": "^1.1.0",
     "@rn-primitives/hooks": "^1.1.0",
     "@rn-primitives/portal": "^1.1.0",
     "@rn-primitives/slot": "^1.1.0",
@@ -25,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "~51.0.39",
+    "expo-blur": "~13.0.2",
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.1",
     "expo-dev-client": "~4.0.14",
