--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.1",
     "expo-dev-client": "~4.0.14",
+    "expo-image-picker": "^16.0.3",
     "expo-linking": "~6.3.1",
     "expo-navigation-bar": "~3.0.4",
     "expo-router": "~3.5.24",
@@ -51,6 +52,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-controller": "^1.14.4",
     "react-native-pager-view": "6.3.0",
+    "react-native-picker-modal-view": "^1.3.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
@@ -58,6 +60,7 @@
     "react-native-uitextview": "^1.1.4",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
+    "rn-country-picker": "^1.0.8",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.23.8"
   },
