image-picker-add

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@shopify/flash-list": "1.6.4",
     "@stripe/stripe-react-native": "^0.39.0",
     "@tanstack/react-table": "^8.20.5",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "~51.0.39",
@@ -37,7 +38,7 @@
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.1",
     "expo-dev-client": "~4.0.14",
-    "expo-image-picker": "^16.0.3",
+    "expo-image-picker": "15.0.5",
     "expo-linking": "~6.3.1",
     "expo-navigation-bar": "~3.0.4",
     "expo-router": "~3.5.24",
