--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@rn-primitives/alert-dialog": "^1.1.0",
     "@rn-primitives/avatar": "^1.1.0",
     "@rn-primitives/checkbox": "^1.1.0",
+    "@rn-primitives/context-menu": "^1.1.0",
+    "@rn-primitives/dropdown-menu": "^1.1.0",
     "@rn-primitives/hooks": "^1.1.0",
     "@rn-primitives/portal": "^1.1.0",
     "@rn-primitives/slot": "^1.1.0",
@@ -38,6 +40,7 @@
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.1",
     "expo-dev-client": "~4.0.14",
+    "expo-haptics": "~13.0.1",
     "expo-image-picker": "15.0.5",
     "expo-linking": "~6.3.1",
     "expo-navigation-bar": "~3.0.4",
@@ -51,6 +54,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-ios-context-menu": "^2.5.2",
+    "react-native-ios-utilities": "^4.5.1",
     "react-native-keyboard-controller": "^1.14.4",
     "react-native-pager-view": "6.3.0",
     "react-native-picker-modal-view": "^1.3.2",
