--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "rn-country-picker": "^1.0.8",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.23.8"
   },
